--- a/money.html
+++ b/money.html
@@ -97,9 +97,9 @@
             <h3>Single</h3>
             <div class="price">$100</div>
             <ul>
-              <li>Ecology</li>
-              <li>Ecology</li>
-              <li>Ecology</li>
+              <li>15 Websited</li>
+              <li>30 SSD</li>
+              <li>Domain Name</li>
             </ul>
             <a href="#">Get Started</a>
           </div>
@@ -112,9 +112,9 @@
             <h3>Excenssion</h3>
             <div class="price">$700</div>
             <ul>
-              <li>Ecology</li>
-              <li>Ecology</li>
-              <li>Ecology</li>
+              <li>10 Websited</li>
+              <li>30 SSD</li>
+              <li>Domain Name</li>
             </ul>
             <a href="#">Get Started</a>
           </div>
@@ -127,9 +127,9 @@
             <h3>Advance</h3>
             <div class="price">$900</div>
             <ul>
-              <li>Ecology</li>
-              <li>Ecology</li>
-              <li>Ecology</li>
+              <li>178 Websited</li>
+              <li>30 SSD</li>
+              <li>Domain Name</li>
             </ul>
             <a href="#">Get Started</a>
           </div>
